<resources>
    <string name="app_name">欢乐诵</string>

    <string name="font_regular" translatable="false">fonts/default-Regular.ttf</string>
    <string name="font_bold" translatable="false">fonts/default-Bold.ttf</string>

    <string name="dcd" translatable="false">dcd</string>
    <string name="login">登录</string>
    <string name="cate">分类</string>
    <string name="author_">作者:</string>
    <string name="start_n_reading">开始\n朗读</string>
    <string name="start_reading">开始朗读</string>
    <string name="listen">试听</string>
    <string name="retry">重读</string>
    <string name="re_reading">再读一遍</string>
    <string name="done">完成</string>
    <string name="timer" translatable="false">00:00</string>
    <string name="like_">喜欢(%1$d)</string>
    <string name="feeling">读者感想</string>
    <string name="feeling_my">感想</string>
    <string name="let_me_try">我要读</string>
    <string name="share_">分享到:</string>
    <string name="city">城市</string>
    <string name="area">区域</string>
    <string name="school">学校</string>
    <string name="grade">年级</string>
    <string name="team_class">班级</string>
    <string name="my_reading">我的朗读</string>
    <string name="students_reading">学生朗读</string>
    <string name="listened">已听历史</string>
    <string name="clean_cache">清除缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="change_pwd">修改密码</string>
    <string name="exit">退出登录</string>
    <string name="rate_plz">请评分</string>
    <string name="rate">评分</string>
    <string name="not_rated">未评分</string>
    <string name="rated">已评分</string>
    <string name="login_plz">请登录</string>
    <string name="total_">共</string>
    <string name="password_not_match">密码输入不一致</string>
    <string name="login_fail">登录失败，用户名或密码错误</string>
    <string name="deleted_">已删除：</string>
    <string name="undone">撤销</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="all">全部</string>
    <string name="total__count">共%1$d篇</string>
    <string name="download_">正在加载配乐%1$s</string>
    <string name="upload_">上传%1$s</string>
    <string name="upload">上传</string>
    <string name="mixing">正在合成</string>
    <string name="change_pwd_old">原密码错误</string>
    <string name="change_pwd_new">新密码不能为空</string>
    <string name="change_pwd_new_too_short">新密码至少6位数</string>
    <string name="change_pwd_confirm">密码输入不一致</string>
    <string name="committing">正在提交</string>
    <string name="committed">谢谢你的评分！</string>
    <string name="_school_count">%1$s 等%2$d所学校</string>
    <string name="checker_">(审核老师：%1$s)</string>
    <string name="data_source">数据来源</string>
    <string name="filter">筛选</string>
    <string name="rank_week">周排行</string>
    <string name="rank_month">月排行</string>
    <string name="my_school">本校</string>
    <string name="_ago_year">年前</string>
    <string name="update_now_">是否现在升级？</string>
    <string name="update">升级</string>
    <string name="next_time">下次</string>
    <string name="content_permission_denied">您禁用了录音权限\n请在“设置>应用>欢乐诵>权限”中开启“麦克风”权限</string>
    <string name="goto_settings">去设置</string>
    <string name="version_" translatable="false">V%1$s</string>
    <string name="first_run1">更好玩的朗读方式</string>
    <string name="first_run2">听小伙伴们独一无二的声音</string>
    <string name="first_run3">重新感受语言和文化的魅力</string>
    <string name="start_taste">开始体验</string>
    <string name="slogan">听  另一个世界</string>
    <string name="no_wifi">你还没有连接WiFi，这会使用你的手机上网流量哟</string>
    <string name="continue_no_wifi">继续</string>
    <string name="return_no_wifi">返回</string>
    <string name="recording_exit_confirm">现在退出将会停止录音</string>
    <string name="upload_exit_confirm">确定要舍弃这次的朗读作品并退出吗</string>
    <string name="recording_exit">退出</string>
    <string name="entering">正在进入</string>
    <string name="library_in_class">课内</string>
    <string name="library_out_class">课外</string>
    <string name="default_subject" translatable="false">语文</string>
    <string name="about_version" translatable="false">%1$s V%2$s</string>
    <string name="copyright" translatable="false">%1$s©All Rights Reserved.</string>
    <string name="exonerate_title" translatable="false">《免责声明》</string>
    <string name="exonerate_content" translatable="false">　　欢乐诵是一款利用科学现代的方式，为中小学生提供语言学习方式和诵读体验的教育音频类app，帮助中小学生开发思维、锻炼沟通与表达能力。部分资源来源于网络，感谢资源制作者无私的劳动，由于被转载多次无法联系作者或者指明出处，如果您觉得侵害了您的权益，请联系我们，我们会在最短的时间内处理。\n　　欢乐诵应用内所有孩子音频信息仅供父母们与孩子使用，请勿用于商业用途。</string>
    <string name="about_contact">联系邮箱：help@happysong.com.cn</string>

    <string name="toast_protocol_error">协议错误</string>
    <string name="toast_article_err">这篇文章还没有准备好，重新选一篇吧</string>
    <string name="toast_article_invalid">这篇文章现已不可用</string>
    <string name="toast_music_err">选择一首音乐吧</string>
    <string name="toast_clean_ok">已全部清除</string>
    <string name="toast_clean_undone">一些文件将在退出时删除</string>
    <string name="toast_recording_not_ready">正在准备录音</string>
    <string name="toast_feedback_ok">我们已经收到你的建议，谢谢！</string>
    <string name="toast_login_timeout">登录过期，请重新登录</string>
    <string name="toast_upload_ok">上传成功，请在我的朗读中查看</string>
    <string name="toast_avatar_err">图片读取错误，无法设置为新头像</string>
    <string name="toast_avatar_ok">头像设置成功</string>
    <string name="toast_password_ok">密码设置成功</string>
    <string name="toast_headset">建议使用耳机录制以提高录音质量</string>
    <string name="toast_server_err_0">哟，网络不好，请检查网络连接</string>
    <string name="toast_server_err_1">哟，网络不好，请检查网络连接!</string>
    <string name="toast_qiniu_token">文件无法上传</string>
    <string name="toast_qiniu_token_network">网络连接错误，文件无法上传</string>
    <string name="toast_qiniu_token_internal">文件无法上传，文件可能已被删除</string>

    <string name="dialog_feeling">说点什么吧!</string>
    <string name="dialog_feeling_confirm">上传</string>
    <string name="dialog_clean_cache">是否清除所有缓存</string>
    <string name="dialog_update">发现新版本</string>
    <string name="dialog_permission_denied">权限不足</string>
    <string name="dialog_wifi">未连接WiFi</string>
    <string name="dialog_recording">正在录音</string>
    <string name="dialog_upload">还未上传</string>

    <string name="hint_feeling">在上传之前说说你的感想吧</string>
    <string name="hint_feedback">填写格式：学校＋年级班级＋身份（家长/学生/教师）＋问题＋联系方式（QQ/电话）</string>
    <string name="hint_pwd_old">原密码</string>
    <string name="hint_pwd_new">新密码</string>
    <string name="hint_pwd_confirm">确认新密码</string>
    <string name="hint_search_article">文章标题、作者</string>
    <string name="hint_search">文章标题、作者、读者</string>

    <string name="activity_detail">文章详情</string>
    <string name="activity_music">选择音乐</string>
    <string name="activity_reading">朗读文章</string>
    <string name="activity_filter">筛选</string>
    <string name="activity_my_reading">我的朗读</string>
    <string name="activity_my_reading_teacher">学生朗读</string>
    <string name="activity_feedback">意见反馈</string>
    <string name="activity_change_password">修改密码</string>
    <string name="activity_listened">已听历史</string>
    <string name="activity_login">登录</string>
    <string name="activity_category">文章分类</string>
    <string name="activity_search">搜索</string>
    <string name="activity_zoom">查看图片</string>
    <string name="activity_about">关于我们</string>

    <string name="action_share">分享</string>
    <string name="action_share_wechat">微信好友</string>
    <string name="action_share_wechat_moment">微信朋友圈</string>
    <string name="action_share_qq">QQ好友</string>
    <string name="action_share_qq_zone">QQ空间</string>
    <string name="action_share_weibo">新浪微博</string>
    <string name="action_done">完成</string>
    <string name="action_commit">提交</string>
    <string name="action_clean">清空</string>
    <string name="action_switch">切换</string>

    <string name="test_long" translatable="false">一二三四甲乙丙丁子丑寅卯ABCD The quick brown fox jumps over the lazy dog.</string>
    <string name="test_title" translatable="false">从百草园到三味书屋</string>
    <string name="test_title_author" translatable="false">从百草园到三味书屋 - 鲁迅</string>
    <string name="test_title_reader" translatable="false">从百草园到三味书屋 - 吴晗</string>
    <string name="test_author" translatable="false">鲁迅</string>
    <string name="test_time" translatable="false">16:25</string>
    <string name="test_cate" translatable="false">一年级语文</string>
    <string name="test_num" translatable="false">19</string>
    <string name="test_content" translatable="false">　　我小时候，家在哈佛尔，并不是有钱的人家，也就是刚刚够生活罢了。我父亲做着事，很晚才从办公室回来，挣的钱不多。我有两个姐姐。\n\n　　我母亲对我们的拮据生活感到非常痛苦。那时家里样样都要节省，有人请吃饭是从来不敢答应的，以免回请；买日用品也是常常买减价的，买拍卖的底货；姐姐的长袍是自己做的，买15个铜子一米的花边，常常要在价钱上计较半天。\n　　可是每星期日，我们都要衣冠整齐地到海边栈桥上去散步。那时候，只要一看见从远方回来的大海船进口来，父亲总要说他那句永不变更的话：\n　　我小时候，家在哈佛尔，并不是有钱的人家，也就是刚刚够生活罢了。我父亲做着事，很晚才从办公室回来，挣的钱不多。我有两个姐姐。\n\n　　我母亲对我们的拮据生活感到非常痛苦。那时家里样样都要节省，有人请吃饭是从来不敢答应的，以免回请；买日用品也是常常买减价的，买拍卖的底货；姐姐的长袍是自己做的，买15个铜子一米的花边，常常要在价钱上计较半天。\n　　可是每星期日，我们都要衣冠整齐地到海边栈桥上去散步。那时候，只要一看见从远方回来的大海船进口来，父亲总要说他那句永不变更的话：</string>
    <string name="test_music_type" translatable="false">舒缓</string>
    <string name="test_music_name" translatable="false">E调前进曲（巴哈）</string>
    <string name="test_user" translatable="false">吴晗</string>
    <string name="test_school_team_class" translatable="false">闵行区汽轮小学 - 五(1)班</string>
    <string name="test_school_name" translatable="false">闵行区汽轮小学</string>
    <string name="test_checker" translatable="false">(审核老师：王安石)</string>
    <string name="test_unity" translatable="false">第一单元</string>
    <string name="test_tab" translatable="false">TAB</string>
    <string name="test_rank" translatable="false">1</string>
    <string name="test_city" translatable="false">上海市</string>
    <string name="test_area" translatable="false">闵行区</string>
    <string name="test_school" translatable="false">第一实验小学</string>
    <string name="test_grade" translatable="false">六年级</string>
    <string name="test_team_class" translatable="false">一班</string>
    <string name="test_sub_cate" translatable="false">全部</string>
    <string name="test_category" translatable="false">语文</string>
    <string name="test_chapter" translatable="false">第一部分</string>
    <string name="test_feeling" translatable="false">感觉读的还不错，老师求五分！</string>
    <string name="test_data_source" translatable="false">闵行区</string>
    <string name="test_subject" translatable="false">语文</string>
    <string name="test_edition" translatable="false">人教版</string>
</resources>
