<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="62dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/dcd"
        android:src="@mipmap/img_loading_1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="56dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/slogan"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/activity_welcome_tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="invisible" />
</FrameLayout>