<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/item_rank_tvRank"
        fontPath="@string/font_bold"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/test_num"
        android:textColor="@color/textRank"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/item_rank_imgCover"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/dcd" />


    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_rank_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:singleLine="true"
            android:text="@string/test_title"
            android:textColor="@color/textReadable"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_rank_tvFeeling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/test_feeling"
            android:textColor="@color/div_tab" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/item_rank_tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_user"
                android:textColor="@color/textRank" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/textRank" />

            <TextView
                android:id="@+id/item_rank_tvSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_school_name"
                android:textColor="@color/textRank" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16.5dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/dcd"
        android:src="@mipmap/icon_love_s" />

    <TextView
        android:id="@+id/item_rank_tvPraiseCount"
        fontPath="@string/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/test_num"
        android:textColor="@color/textRed"
        android:textSize="12sp"
        android:textStyle="bold" />
</LinearLayout>