<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <View
            android:layout_width="4dp"
            android:layout_height="16dp"
            android:layout_marginRight="8dp"
            android:background="?colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_source" />

        <TextView
            android:id="@+id/head_recommend_tvDataSource"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_data_source"
            android:textColor="?colorPrimary" />

        <LinearLayout
            android:id="@+id/head_recommend_lnFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="-12dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="16dp"
                android:layout_marginLeft="2dp"
                android:contentDescription="@string/dcd"
                android:src="@mipmap/icon_shaixuan_right" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>