<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstRunBg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/view_first_run_img"
        android:layout_width="310dp"
        android:layout_height="368dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/dcd" />

    <TextView
        android:id="@+id/view_first_run_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="42dp"
        android:text="@string/first_run1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/view_first_run_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="114dp"
        android:alpha="0"
        android:background="@drawable/selector_btn_primary_corner"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/start_taste"
        android:textColor="@android:color/white"
        android:visibility="invisible" />
</FrameLayout>