<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="40dp"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/item_recommend_imgCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dcd" />

        <ImageView
            android:id="@+id/item_recommend_imgPlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/dcd"
            android:padding="12dp"
            android:src="@mipmap/icon_play_icon" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_recommend_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/test_title"
            android:textColor="@color/textReadable"
            android:textSize="16sp" />

        <android.widget.RatingBar
            android:id="@+id/item_recommend_rating"
            style="@android:style/Widget.RatingBar"
            android:layout_width="100dp"
            android:layout_height="22dp"
            android:isIndicator="true"
            android:progressDrawable="@drawable/layer_rating_s_orange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_recommend_tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_user"
                android:textColor="?colorAccent" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:background="?colorAccent" />

            <TextView
                android:id="@+id/item_recommend_tvSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_school_name"
                android:textColor="?colorAccent" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16.5dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/dcd"
        android:src="@mipmap/icon_love_s" />

    <TextView
        android:id="@+id/item_recommend_tvPraiseCount"
        fontPath="@string/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/test_num"
        android:textColor="@color/textRed"
        android:textSize="12sp"
        android:textStyle="bold" />
</LinearLayout>