<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:clickable="true">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="bottom"
        android:background="@color/div_list" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/item_listened_imgCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/dcd" />

            <ImageView
                android:id="@+id/item_listened_imgPlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/dcd"
                android:padding="12dp"
                android:src="@mipmap/icon_play_icon" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/item_listened_tvTitle"
                fontPath="@string/font_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_title"
                android:textColor="@color/textReadable"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/item_listened_rbRating"
                android:layout_width="100dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:isIndicator="true"
                android:rating="5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/item_listened_tvUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_user"
                    android:textColor="@color/textReadable" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/textReadable" />

                <TextView
                    android:id="@+id/item_listened_tvSchool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_school_name"
                    android:textColor="@color/textReadable" />
            </LinearLayout>
        </FrameLayout>

        <ImageView
            android:id="@+id/item_listened_imgLike"
            android:layout_width="16dp"
            android:layout_height="16.5dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/dcd"
            android:src="@mipmap/icon_love_s" />

        <TextView
            android:id="@+id/item_listened_imgLikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/test_num"
            android:textColor="@color/textRed"
            android:textSize="12sp" />
    </LinearLayout>
</FrameLayout>