<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:orientation="vertical"
    android:paddingTop="22dp">

    <ImageView
        android:id="@+id/view_recorder_imgRetry"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="94dp"
        android:layout_marginTop="22dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/dcd" />

    <ImageView
        android:id="@+id/view_recorder_imgRecord"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/dcd" />

    <ImageView
        android:id="@+id/view_recorder_imgDone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="22dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/dcd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="94dp"
        android:text="@string/retry"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/timer"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="94dp"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:textSize="12sp" />
</FrameLayout>